test/Fail/Issue3590-2.err
Termination checking mutual block 0
Issue3590-2.agda:28.7-10: error: [UnequalTypes]
The types
  Set₁
and
  Set
are not equal
when checking that the expression Set has type Set
